--- a/Ajax/pom.xml
+++ b/Ajax/pom.xml
@@ -75,6 +75,22 @@
       <version>1.1.7</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.2</version>
+    </dependency>
+
+
+
+
 
   </dependencies>
 
