--- a/Ajax/src/main/resources/config.properties
+++ b/Ajax/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #jdbc
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql:///douban_movie
+jdbc.url=jdbc:mysql:///library
 jdbc.username=root
 jdbc.password=123456liming
 
