--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -1,74 +1,60 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
-
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.kaishengit</groupId>
+  <groupId>com.kiashengit</groupId>
   <artifactId>myapp</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>myapp Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-
-
-
-
-  <!--
-
-  需要的依赖: junit    4.12
-           : log4j    1.7.5
-           : Servlet  3.1.0
-           : jstl     1.2
-
-           : spring 4.2.6
-             spring-context
-             spring-test    spring单元测试
-             spring-tx      spring-jdbc事务管理
-             spring-web
-             spring-webMVC
-           : JSR            JSR规范
-
-
-   插件：  tomcat  2.2
-          编译插件 1.7
-
-
-  -->
-
-
-  <!--各种依赖版本号的集中化处理-->
-
-
   <dependencies>
 
-
+    <!--单元测试-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
 
+    <!--Servlet-->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.5</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
     </dependency>
 
-
-   <!-- servlet-->
-    <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <scope>provided</scope>
-  </dependency>
-
+    <!--jstl-->
     <dependency>
       <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
 
+    <!--mybatis-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
+    <!--mysql-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.33</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.1.1</version>
+    </dependency>
 
     <!--spring-->
     <dependency>
@@ -97,6 +83,13 @@
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>4.2.6.RELEASE</version>
+    </dependency>
+
+    <!--springMVC-->
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>4.2.6.RELEASE</version>
     </dependency>
@@ -106,24 +99,60 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.2.6.RELEASE</version>
     </dependency>
-    <!--jackson-->
+
+    <!--other-->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.5.4</version>
+      <version>2.6.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.21</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax-inject</artifactId>
+      <version>1</version>
+    </dependency>
 
   </dependencies>
+
+
+
+
+
   <build>
     <finalName>myapp</finalName>
-
-
     <plugins>
-
-
-      <!--编译插件-->
+      <!-- 编译插件 -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -134,8 +163,7 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
-
-      <!--tom插件-->
+      <!--Tomcat插件-->
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
@@ -145,8 +173,6 @@
           <path>/</path>
         </configuration>
       </plugin>
-
-
     </plugins>
   </build>
 </project>
