--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -139,7 +139,7 @@
 
     <dependency>
       <groupId>javax.inject</groupId>
-      <artifactId>javax-inject</artifactId>
+      <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
 
