--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -133,9 +133,10 @@
 
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
+      <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.21</version>
     </dependency>
+
 
     <dependency>
       <groupId>javax.inject</groupId>
