--- a/CRM/pom.xml
+++ b/CRM/pom.xml
@@ -159,9 +159,16 @@
       <version>1.10</version>
     </dependency>
 
-  </dependencies>
+
+    <!--pinyin4j-->
+    <dependency>
+      <groupId>com.belerweb</groupId>
+      <artifactId>pinyin4j</artifactId>
+      <version>2.5.1</version>
+    </dependency>
 
 
+</dependencies>
 
 
 
